wrote overview for the report

--- a/vehicle-sales-eda.ipynb
+++ b/vehicle-sales-eda.ipynb
@@ -14,29 +14,45 @@
     "tags": []
    },
    "source": [
-    "# Vehicle Sales EDA"
+    "<center>\n",
+    "<h2> Vehicle Sales Data Analytics  </h2> "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "7e37ffaa",
-   "metadata": {
-    "papermill": {
-     "duration": 0.012127,
-     "end_time": "2024-05-18T14:42:09.984564",
-     "exception": false,
-     "start_time": "2024-05-18T14:42:09.972437",
-     "status": "completed"
-    },
-    "tags": []
-   },
+   "id": "0652166b",
+   "metadata": {},
    "source": [
-    "## Importing Libraries and Data"
+    "<h3 style=\"color: #3366ff;\">Notebook Overview</h3>\n",
+    "\n",
+    "<p>This Jupyter Notebook provides a comprehensive and integrated analysis of the <em>\"Vehicle Sales and Market Trends Dataset\"</em>. This dataset offers a wealth of information about vehicle sales transactions, including details such as make, model, condition, selling prices, and more. The unique aspect of this notebook is the simultaneous visualization and reporting of insights, which allows for a more integrated and comprehensive understanding of the data.</p>\n",
+    "\n",
+    "<h4 style=\"color: #3366ff;\">Key Sections:</h4>\n",
+    "\n",
+    "<ul>\n",
+    "<li><strong>Data Import and Exploration:</strong> The notebook begins with the import of necessary libraries and the loading of the dataset. It then explores the dataset's structure, dimensions, and missing values.</li>\n",
+    "\n",
+    "<li><strong>Data Cleaning and Transformation:</strong> This section focuses on cleaning and transforming the data. It handles missing values, converts data types, and addresses inconsistencies in categorical columns.</li>\n",
+    "\n",
+    "<li><strong>Integrated Data Visualization and Reporting:</strong> After cleaning the data, the notebook visualizes the dataset using various plots and charts, while simultaneously reporting insights. It performs correlation analysis, highlights key observations and trends, and suggests recommendations or further actions based on the analysis.</li>\n",
+    "</ul>\n",
+    "\n",
+    "<p>Throughout the notebook, various Python packages are utilized, including pandas, matplotlib, seaborn, and scikit-learn, among others. These packages enable data manipulation, visualization, and statistical analysis to extract meaningful insights from the dataset.</p>\n",
+    "\n",
+    "<p>Overall, this notebook serves as a comprehensive guide to understanding the characteristics and patterns within the vehicle sales data, helping to understand market trends, consumer preferences, and pricing strategies.</p>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "81e4d203",
+   "metadata": {},
+   "source": [
+    "<h3 style=\"color: #3366ff;\">1. Data Import and Exploration</h3>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "a6b34595",
    "metadata": {
     "execution": {
@@ -57,20 +73,33 @@
    },
    "outputs": [],
    "source": [
+    "# Importing necessary libraries for data analysis and visualization\n",
+    "\n",
+    "# numpy is used for numerical computations in Python\n",
     "import numpy as np\n",
+    "\n",
+    "# pandas is used for data manipulation and analysis\n",
     "import pandas as pd\n",
+    "\n",
+    "# matplotlib.pyplot is a plotting library used for creating static, animated, and interactive visualizations in Python\n",
     "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# seaborn is a Python data visualization library based on matplotlib\n",
     "import seaborn as sns\n",
     "\n",
+    "# warnings is a standard Python library used to suppress warning messages\n",
     "import warnings\n",
     "\n",
+    "# Ignore all warning messages that might appear during the execution of the program\n",
     "warnings.filterwarnings('ignore')\n",
+    "\n",
+    "# Set the aesthetic style of the plots. This affects things like the color of the axes, whether a grid is enabled by default, and other aesthetic elements\n",
     "sns.set_style()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "5e8f60ff",
    "metadata": {
     "execution": {
@@ -259,13 +288,17 @@
        "4  Thu Dec 18 2014 12:30:00 GMT-0800 (PST)  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# pandas provides a function read_csv() to read csv files and convert them into dataframe\n",
+    "# Here, we are reading a csv file named 'car_prices.csv' and converting it into a dataframe named 'data'\n",
     "data = pd.read_csv('car_prices.csv')\n",
+    "\n",
+    "# Here, we are displaying the first 5 rows of the 'data' dataframe\n",
     "data.head()"
    ]
   },
