add analytics for each of plot

--- a/vehicle-sales-eda.ipynb
+++ b/vehicle-sales-eda.ipynb
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 45,
    "id": "5e8f60ff",
    "metadata": {
     "execution": {
@@ -135,18 +135,23 @@
    "outputs": [],
    "source": [
     "def describe_data(data):\n",
+    "    # Print the shape of the DataFrame\n",
     "    print(colored(\"Shape of the data:\", 'blue'))\n",
     "    print(data.shape)\n",
     "    \n",
+    "    # Print the column names of the DataFrame\n",
     "    print(colored(\"\\nColumns in the data:\", 'green'))\n",
     "    print(data.columns)\n",
     "    \n",
+    "    # Print information about the DataFrame like the column dtypes and non-null values\n",
     "    print(colored(\"\\nInformation about the data:\", 'cyan'))\n",
     "    data.info()\n",
     "    \n",
+    "    # Print statistical summary of the numerical columns\n",
     "    print(colored(\"\\nDescription of numerical data:\", 'magenta'))\n",
     "    print(data.describe().T)\n",
     "    \n",
+    "    # Print statistical summary of the non-numerical columns\n",
     "    print(colored(\"\\nDescription of non-numerical data:\", 'yellow'))\n",
     "    print(data.describe(exclude='number').T)"
    ]
@@ -265,6 +270,26 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7448793a",
+   "metadata": {},
+   "source": [
+    "<h4 style=\"color: #3366ff;\"> Raw Data Overview 📊</h4>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "01102cb1",
+   "metadata": {},
+   "source": [
+    "1. Initially, our dataset consists of 457731 rows and 16 columns. Out of these 16 columns, 5 are of integer type and the remaining 11 are string or object type.\n",
+    "\n",
+    "2. Based on our statistical analysis, the Manheim Market Report (MMR) and Selling Price values are relatively similar. The maximum odometer reading is 999999, which, while high, is not implausible.\n",
+    "\n",
+    "3. The dataset includes cars manufactured as far back as 1982, indicating the potential presence of Vintage Cars."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "2e33ccec",
    "metadata": {
     "papermill": {
@@ -363,8 +388,14 @@
     "tags": []
    },
    "source": [
-    "As we see there are many values missing.\n",
-    "\n",
+    "The dataset contains numerous missing values. The 'Transmission' column has the most, with about 13% of its data missing, which is a significant amount. Other columns like 'Make', 'Model', 'Trim', 'Body', and 'Condition' have between 1%-2% missing values. The remaining columns have less than 1% missing values."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "db0ceae1",
+   "metadata": {},
+   "source": [
     "I'm going to remove the missing values. We have good number of data points and the missing values is less the 5% in almost all of the columns besides of 'Transmission' column as it has 13% of values missing. "
    ]
   },
@@ -513,7 +544,7 @@
    "id": "2fb6cb50",
    "metadata": {},
    "source": [
-    "<h4 style=\"color: #3366ff;\"> Data Transforming 📊</h4>"
+    "<h4 style=\"color: #3366ff;\"> Data Transformation 📊</h4>"
    ]
   },
   {
@@ -521,12 +552,12 @@
    "id": "9b367f7f",
    "metadata": {},
    "source": [
-    " Let's convert the 'year' column in our 'data' DataFrame from its current data type to a datetime data type. This is particularly important when dealing with time series data, as it allows us to leverage the powerful time-based functionalities provided by pandas."
+    "We have Year and Sale date columns which should be of datetime data type but they are in int and object type so we'll convert them."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 46,
    "id": "51c935ee",
    "metadata": {
     "execution": {
@@ -550,6 +581,32 @@
     "# Since year is a time based data, the best approach is to convert it into datetime data type.\n",
     "\n",
     "data['year'] = pd.to_datetime(data['year'], format='%Y').dt.year"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "309ce0d7",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-05-18T14:42:21.368324Z",
+     "iopub.status.busy": "2024-05-18T14:42:21.367984Z",
+     "iopub.status.idle": "2024-05-18T14:42:22.355183Z",
+     "shell.execute_reply": "2024-05-18T14:42:22.354335Z"
+    },
+    "metadata": {},
+    "papermill": {
+     "duration": 1.004745,
+     "end_time": "2024-05-18T14:42:22.357483",
+     "exception": false,
+     "start_time": "2024-05-18T14:42:21.352738",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "data['saledate'] = pd.to_datetime(data['saledate'], utc=True, format='mixed').dt.date"
    ]
   },
   {
@@ -625,7 +682,7 @@
     "tags": []
    },
    "source": [
-    "The condition column has values between 1 to around 50 which is not correct. It should be between 1 to 5 as it does not look correct to me to have condition 45.\n",
+    "The condition column have values such as 45, 59, 34 etc but this is not correct as it is a column which should have values between 1-5 as rating.\n",
     "\n",
     "Let's change it into 1 to 5."
    ]
@@ -752,7 +809,11 @@
     "tags": []
    },
    "source": [
-    "We can see that 'Color' and 'Interior' column has value '-' which is not correct, there might be any other color but since about that I have no knowledge or idea, i'll use 'MultiColor' as value. This way, we know it is our custom used value yet it will give meaning to the data."
+    "In the 'Color' and 'Interior' columns, we encounter the value '-', which is not accurate. Since we lack specific knowledge about what this color should be, we'll replace it with 'MultiColor'. \n",
+    "\n",
+    "This custom value not only gives meaning to our data but also prevents us from adding more values to a specific color. \n",
+    "\n",
+    "Thus, any data points in the 'Color' and 'Interior' columns with a value of '-' are replaced with 'Multicolor'."
    ]
   },
   {
@@ -783,46 +844,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "309ce0d7",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-05-18T14:42:21.368324Z",
-     "iopub.status.busy": "2024-05-18T14:42:21.367984Z",
-     "iopub.status.idle": "2024-05-18T14:42:22.355183Z",
-     "shell.execute_reply": "2024-05-18T14:42:22.354335Z"
-    },
-    "metadata": {},
-    "papermill": {
-     "duration": 1.004745,
-     "end_time": "2024-05-18T14:42:22.357483",
-     "exception": false,
-     "start_time": "2024-05-18T14:42:21.352738",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "data['saledate'] = pd.to_datetime(data['saledate'], utc=True, format='mixed').dt.date"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "id": "4e12fe95",
-   "metadata": {
-    "papermill": {
-     "duration": 0.01436,
-     "end_time": "2024-05-18T14:42:22.386638",
-     "exception": false,
-     "start_time": "2024-05-18T14:42:22.372278",
-     "status": "completed"
-    },
-    "tags": []
-   },
+   "id": "c878e134",
+   "metadata": {},
    "source": [
-    "Saledate is also datetime column but it has simply object as data-type. We will convert it into datetime and keep the date part only discarding the time part."
+    "'Body' column values have some inconsistensies like Sedan, sedan or SUV, suv. Therefore, Let's convert them to lower case"
    ]
   },
   {
@@ -876,12 +902,12 @@
    "id": "898bb883",
    "metadata": {},
    "source": [
-    "Let's show the head..."
+    "Let's display the first few rows of our cleaned dataset to get a glimpse of the data we'll be working with."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 44,
    "id": "3752ba8c",
    "metadata": {
     "execution": {
@@ -1025,7 +1051,7 @@
        "4  2014    BMW  sedan    automatic    ca        4.0    2641.0   gray    black  66000.0       67000.0  2014-12-18"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1048,7 +1074,7 @@
     "tags": []
    },
    "source": [
-    "## Data Visualization"
+    "<h3 style=\"color: #3366ff;\">2. Data Visualisation</h3>"
    ]
   },
   {
@@ -1147,6 +1173,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0b532b5d",
+   "metadata": {
+    "metadata": {}
+   },
+   "source": [
+    "* Ford, Chevrolet, Nissan, Toyota, and Dodge are the top 5 brands by the count.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
    "id": "94bb0052",
@@ -1184,6 +1220,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ec1d957f",
+   "metadata": {},
+   "source": [
+    "* Sedan and SUV are the top 2 body types used in cars.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 22,
    "id": "75aec88d",
@@ -1218,6 +1262,14 @@
    ],
    "source": [
     "countplot('transmission', 'Transmission', 90)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "34b7fc87",
+   "metadata": {},
+   "source": [
+    "* Automtic transmission is most counted, it also maked the dataset imbalanced based on transmission."
    ]
   },
   {
@@ -1295,6 +1347,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3ecd4f99",
+   "metadata": {},
+   "source": [
+    "* There are different color cars but 'Black' and 'Grey' are the most used interior color."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 25,
    "id": "6ccd1c90",
@@ -1333,26 +1393,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "981fd4f1",
-   "metadata": {
-    "papermill": {
-     "duration": 0.019763,
-     "end_time": "2024-05-18T14:42:29.216594",
-     "exception": false,
-     "start_time": "2024-05-18T14:42:29.196831",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "source": [
-    "We have checked all necessary categorical columns there are some columns left such as 'Model', 'Trim', 'Vin', and 'Seller'. These columns have a lot of data points which will not help us understanding data or anything related that much."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "54a95113",
+   "id": "76a85188",
    "metadata": {},
-   "source": []
+   "source": [
+    "13. Florida and California have 70k-80k and more cars while all other are below 50k cars."
+   ]
   },
   {
    "cell_type": "code",
@@ -1447,6 +1492,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1aa3bd13",
+   "metadata": {},
+   "source": [
+    "* The range of manufacturing years for cars in our dataset spans from 2000 to 2015. However, there are outliers present, with some cars manufactured in 1990 or earlier. This could indicate the presence of classic or vintage cars in our dataset."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 28,
    "id": "d29dfe47",
@@ -1484,6 +1537,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7a520c57",
+   "metadata": {},
+   "source": [
+    "* The majority of cars in our dataset have a condition rating between 2 and 4. However, there are also cars with the lowest condition rating of 1 and the highest rating of 5. This suggests a wide range of vehicle conditions in our data, from poor to excellent."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 29,
    "id": "44cb5626",
@@ -1518,6 +1579,14 @@
    ],
    "source": [
     "boxplot('odometer', 'Odometer')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8fad8cf3",
+   "metadata": {},
+   "source": [
+    "* The maximum odometer reading in our dataset is approximately 200,000 miles. However, there are notable outliers, with some cars reported to have traveled as much as 999,999 miles. This extreme mileage seems impossible and may indicate data entry errors. In real-world scenarios, such high mileage is rare and could significantly impact a vehicle's value and desirability."
    ]
   },
   {
@@ -1608,7 +1677,7 @@
     "tags": []
    },
    "source": [
-    "Checking out these results we can see that all these columns have number of outliers and the 'MMR', 'Selling Price' column is highly skewed to the right."
+    "* The Manheim Market Report (MMR) and Selling Price values in our dataset are quite similar. A significant number of cars fall within the price range of 10,000 to 20,000. Both these distributions are right-skewed, indicating that while most cars are priced in this range, there are also a few cars with significantly higher prices. This could reflect a market where the majority of transactions involve moderately priced vehicles, with a smaller segment of high-end or luxury vehicle"
    ]
   },
   {
@@ -1683,6 +1752,15 @@
    ],
    "source": [
     "sns.heatmap(data[num_col].corr(), annot=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "92724bed",
+   "metadata": {},
+   "source": [
+    "* When we look at the ‘mmr’ and ‘sellingprice’, they seem to move together. As the market value of a car goes up, the selling price tends to go up as well. They have a strong positive relationship with a correlation of 0.98.\n",
+    "* On the other hand, the ‘year’ and ‘odometer’ of a car have a strong negative relationship with a correlation of -0.78. This means that the newer the car, the less likely it is to have high mileage."
    ]
   },
   {
@@ -2072,6 +2150,14 @@
    ],
    "source": [
     "data.groupby('make')[['sellingprice', 'condition']].mean().sort_values(by=['sellingprice', 'condition'], ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bf48ee39",
+   "metadata": {},
+   "source": [
+    "* The average price of the most expensive car brand in our dataset, Rolls Royce, is $153,456.25. Conversely, the cheapest car brand, Dodge, has an average price of just $450.00. This highlights the wide range of car prices in our dataset, reflecting the diversity of the car market from luxury to budget vehicles."
    ]
   },
   {
@@ -2538,6 +2624,72 @@
     "plt.xlabel('Sale Date', fontsize=16)\n",
     "plt.xticks(rotation=45)\n",
     "plt.ylabel('Selling Price', fontsize=16)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "d0eceb86",
+   "metadata": {
+    "metadata": {}
+   },
+   "outputs": [],
+   "source": [
+    "def create_plot(x, y, plot_type, data, hue=None, title=None, xlabel=None, ylabel=None, rotation=None, palette='viridis', alpha=None, figsize=(18,6)):\n",
+    "    plt.figure(figsize=figsize)\n",
+    "    if title:\n",
+    "        plt.title(title, fontsize=20)\n",
+    "    if plot_type == 'bar':\n",
+    "        sns.barplot(x=x, y=y, hue=hue, data=data, palette=palette)\n",
+    "    elif plot_type == 'scatter':\n",
+    "        sns.scatterplot(x=x, y=y, hue=hue, data=data, palette=palette, alpha=alpha)\n",
+    "    elif plot_type == 'line':\n",
+    "        sns.lineplot(x=x, y=y, hue=hue, data=data, palette=palette)\n",
+    "    elif plot_type == 'reg':\n",
+    "        sns.regplot(x=x, y=y, marker='o', color=\".3\", line_kws=dict(color=\"r\"))\n",
+    "    if xlabel:\n",
+    "        plt.xlabel(xlabel, fontsize=16)\n",
+    "    if ylabel:\n",
+    "        plt.ylabel(ylabel, fontsize=16)\n",
+    "    if rotation:\n",
+    "        plt.xticks(rotation=rotation)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "2836d8aa",
+   "metadata": {
+    "metadata": {}
+   },
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "positional argument follows keyword argument (1189502460.py, line 5)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[54], line 5\u001b[0;36m\u001b[0m\n\u001b[0;31m    create_plot(x='sellingprice', y='mmr', plot_type='reg', data, title='Selling Price vs MMR', xlabel='Selling Price', ylabel='MMR')\u001b[0m\n\u001b[0m                                                                                                                                    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m positional argument follows keyword argument\n"
+     ]
+    }
+   ],
+   "source": [
+    "create_plot(x='make', y='sellingprice', plot_type='bar', data=data, hue='transmission', title='Brands vs Selling Price by Transmission', xlabel='Brands', rotation=90, ylabel='Selling Price')\n",
+    "\n",
+    "create_plot(x='sellingprice', y='mmr', plot_type='scatter', data=data, title='Selling Price vs MMR', xlabel='Selling Price', ylabel='MMR', palette='magma', alpha=0.6)\n",
+    "\n",
+    "create_plot(x='sellingprice', y='mmr', plot_type='reg', data=data, title='Selling Price vs MMR', xlabel='Selling Price', ylabel='MMR')\n",
+    "\n",
+    "create_plot(x='state', y='mmr', plot_type='bar', data=data, title='Car MMR vs State', xlabel='State', rotation=45, ylabel='MMR')\n",
+    "\n",
+    "create_plot(x='color', y='sellingprice', plot_type='bar', data=data, title='Car Color vs Selling Price', xlabel='Color', rotation=45, ylabel='Selling Price')\n",
+    "\n",
+    "create_plot(x='interior', y='sellingprice', plot_type='bar', data=data, title='Car Interior Color vs Selling Price', xlabel='Interior Color', rotation=45, ylabel='Selling Price')\n",
+    "\n",
+    "create_plot(x='sellingprice', y='odometer', plot_type='scatter', data=data, title='Car Travelled vs Selling Price', xlabel='Selling Price', rotation=45, ylabel='Car Travelled', palette='viridis', alpha=0.5)\n",
+    "\n",
+    "create_plot(x='year', y='sellingprice', plot_type='line', data=data, title='Manufacturing Year vs Selling Price', xlabel='Manufacturing Year', rotation=45, ylabel='Selling Price')\n",
+    "\n",
+    "create_plot(x='saledate', y='sellingprice', plot_type='line', data=data, title='Sale Date vs Selling Price', xlabel='Sale Date', rotation=45, ylabel='Selling Price')"
    ]
   },
   {
