--- a/vehicle-sales-eda.ipynb
+++ b/vehicle-sales-eda.ipynb
@@ -1405,7 +1405,7 @@
    "id": "76a85188",
    "metadata": {},
    "source": [
-    "13. Florida and California have 70k-80k and more cars while all other are below 50k cars."
+    "* Florida and California have 70k-80k and more cars while all other are below 50k cars."
    ]
   },
   {
