--- a/vehicle-sales-eda.ipynb
+++ b/vehicle-sales-eda.ipynb
@@ -1222,7 +1222,7 @@
     "metadata": {}
    },
    "source": [
-    "* Ford, Chevrolet, Nissan, Toyota, and Dodge being the top 5 brands by count suggests that these brands have a significant presence in the market.\n",
+    "* *Ford, Chevrolet, Nissan, Toyota, and Dodge* being the top 5 brands by count suggests that these brands have a significant presence in the market.\n",
     "* The high count of these brands might indicate a strong consumer preference for them. This could be due to various factors such as the reliability of the vehicles, cost-effectiveness, availability of spare parts, or the resale value."
    ]
   },
@@ -1268,9 +1268,9 @@
    "id": "ec1d957f",
    "metadata": {},
    "source": [
-    "* Sedan and SUV are the top 2 body types used in cars.\n",
+    "* *Sedan and SUV* are the top 2 body types used in cars.\n",
     "* The popularity of sedans and SUVs indicates strong consumer preferences for these body types, likely due to their versatility, comfort, and design.\n",
-    "* Sedans have traditionally been favored for their fuel efficiency and ease of driving, while SUVs are increasingly popular for their spaciousness and capability."
+    "* *Sedans* have traditionally been favored for their fuel efficiency and ease of driving, while *SUVs* are increasingly popular for their spaciousness and capability."
    ]
   },
   {
@@ -2341,9 +2341,9 @@
    "metadata": {},
    "source": [
     "* The selling price of cars with automatic transmissions is generally higher across all brands, with the exception of Land Rover and Lotus. Interestingly, Lotus does not manufacture cars with automatic transmissions, and similarly, Rolls-Royce does not produce cars with manual transmissions.\n",
-    "* Transmission Type Impact: The graph reinforces the trend that automatic transmissions generally command a higher selling price, which could be due to consumer preferences for convenience or the higher cost associated with automatic transmission technology.\n",
-    "* Market Positioning: The absence of manual transmissions in Rolls-Royce vehicles aligns with the brand’s luxury positioning, where the emphasis is on comfort and effortless driving, typically associated with automatic transmissions.\n",
-    "* Brand Exceptions: Lotus’s lower-priced manual transmission cars suggest a focus on driving purism and performance, which is often preferred by driving enthusiasts who seek a more engaged driving experience."
+    "* **Transmission Type Impact**: The graph reinforces the trend that automatic transmissions generally command a higher selling price, which could be due to consumer preferences for convenience or the higher cost associated with automatic transmission technology.\n",
+    "* **Market Positioning**: The absence of manual transmissions in Rolls-Royce vehicles aligns with the brand’s luxury positioning, where the emphasis is on comfort and effortless driving, typically associated with automatic transmissions.\n",
+    "* **Brand Exceptions**: Lotus’s lower-priced manual transmission cars suggest a focus on driving purism and performance, which is often preferred by driving enthusiasts who seek a more engaged driving experience."
    ]
   },
   {
@@ -2400,9 +2400,9 @@
    "source": [
     "Our scatterplot and regression plot (regplot) reveal a strong correlation between the MMR (Manheim Market Report) values and the Selling Price. However, there are a few data points that significantly deviate from this general trend.\n",
     "\n",
-    "* Positive Correlation: The dense clustering of data points along the diagonal indicates a strong positive correlation, suggesting that higher MMR values are typically associated with higher Selling Prices.\n",
-    "* Influence of MMR: Given that MMR is a widely recognized benchmark for vehicle values in auctions, it’s likely that it plays a significant role in setting expectations for Selling Prices.\n",
-    "* Significance of Outliers: The outliers represent cases where the Selling Price deviates from the expected value based on MMR. These could be due to exceptional features, limited edition models, or other factors that add or subtract value independently of the MMR."
+    "* **Positive Correlation**: The dense clustering of data points along the diagonal indicates a strong positive correlation, suggesting that higher MMR values are typically associated with higher Selling Prices.\n",
+    "* **Influence of MMR**: Given that MMR is a widely recognized benchmark for vehicle values in auctions, it’s likely that it plays a significant role in setting expectations for Selling Prices.\n",
+    "* **Significance of Outliers**: The outliers represent cases where the Selling Price deviates from the expected value based on MMR. These could be due to exceptional features, limited edition models, or other factors that add or subtract value independently of the MMR."
    ]
   },
   {
@@ -2524,7 +2524,8 @@
     "* Cars manufactured after the year 2000 show an upward trend in selling price. \n",
     "* **Technological Advancements:** Newer models often incorporate the latest technology, which can enhance performance, safety, and comfort, contributing to higher prices.\n",
     "* **Safety and Efficiency:** Improvements in safety features and fuel efficiency make newer cars more attractive to buyers, justifying higher prices.\n",
-    "* **Economic Factors:** Inflation and economic growth over time can increase car prices. The steep rise after 2010 may reflect economic recovery post-recession.\n"
+    "* **Economic Factors:** Inflation and economic growth over time can increase car prices. The steep rise after 2010 may reflect economic recovery post-recession.\n",
+    "\n"
    ]
   },
   {
