Refactor vehicle sales EDA notebook for clarity and consistency

--- a/vehicle-sales-eda.ipynb
+++ b/vehicle-sales-eda.ipynb
@@ -25,11 +25,11 @@
    "source": [
     "<h3 style=\"color: #3366ff;\">Notebook Overview</h3>\n",
     "\n",
-    "<p>This Jupyter Notebook provides a comprehensive and integrated analysis of the <em>\"Vehicle Sales and Market Trends Dataset\"</em>. This dataset offers a wealth of information about vehicle sales transactions, including details such as make, model, condition, selling prices, and more. The unique aspect of this notebook is the simultaneous visualization and reporting of insights, which allows for a more integrated and comprehensive understanding of the data.</p>\n",
+    "<p>This Jupyter Notebook provides a comprehensive and integrated analysis of the <b>\"Vehicle Sales and Market Trends Dataset\"</b>. This dataset offers a wealth of information about vehicle sales transactions, including details such as make, model, condition, selling prices, and more. The unique aspect of this notebook is the simultaneous visualization and reporting of insights, which allows for a more integrated and comprehensive understanding of the data.</p>\n",
     "\n",
     "<h4 style=\"color: #3366ff;\">Dataset Overview:</h4>\n",
     "\n",
-    "<p>The \"Vehicle Sales and Market Trends Dataset\" provides a comprehensive collection of information pertaining to the sales transactions of various vehicles.</p>\n",
+    "<p>The <b>\"Vehicle Sales and Market Trends Dataset\"</b> provides a comprehensive collection of information pertaining to the sales transactions of various vehicles.</p>\n",
     "\n",
     "<h5 style=\"color: #3366ff;\">File Details:</h5>\n",
     "\n",
