add one more header

--- a/vehicle-sales-eda.ipynb
+++ b/vehicle-sales-eda.ipynb
@@ -1557,6 +1557,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0336cb32",
+   "metadata": {},
+   "source": [
+    "I'm going to create more function for *boxplot* and *histplot* for more plotting ideas."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 194,
    "id": "6b4f70c9",
@@ -2829,6 +2837,20 @@
     "* The fluctuating selling prices could reflect market variability, where external factors such as economic conditions, supply and demand, and consumer preferences influence car prices.\n",
     "* Specific attributes of a car, such as its make, model, condition, mileage, and features, likely have a more direct impact on its selling price than the sale date.\n",
     "* There may be seasonal trends not captured in the graph, where certain times of the year could see higher or lower car sales, affecting average selling prices."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "272d8ec2",
+   "metadata": {},
+   "source": [
+    "# Conclusion\n",
+    "\n",
+    "In this notebook, we conducted an exploratory data analysis on vehicle sales data. Our main goal was to understand the underlying patterns and trends in the data, and to gain insights that could potentially guide future business decisions.\n",
+    "\n",
+    "Through this analysis, we gained valuable insights into the factors that influence vehicle selling prices. These insights could be used to guide pricing strategies, inform negotiations with buyers and sellers, and identify potential opportunities for growth or improvement.\n",
+    "\n",
+    "The purpose of this notebook was to demonstrate the power of exploratory data analysis in extracting meaningful insights from raw data. By visualizing and analyzing the data, we were able to uncover patterns and trends that would not be apparent from the raw data alone."
    ]
   }
  ],
